fix(config): fix

--- a/ts-nextjs-tailwind-starter/package.json
+++ b/ts-nextjs-tailwind-starter/package.json
@@ -14,8 +14,7 @@
     "test": "jest",
     "format": "prettier -w .",
     "format:check": "prettier -c .",
-    "postbuild": "next-sitemap --config next-sitemap.config.js",
-    "prepare": "husky install"
+    "postbuild": "next-sitemap --config next-sitemap.config.js"
   },
   "dependencies": {
     "clsx": "^1.2.1",
