--- a/turbo.json
+++ b/turbo.json
@@ -2,7 +2,7 @@
   "$schema": "https://turbo.build/schema.json",
   "pipeline": {
     "build": {
-      "dependsOn": ["^build"]
+      "dependsOn": ["^lint"]
     },
     "test": {
       "dependsOn": ["build"],
@@ -15,6 +15,8 @@
     "dev": {
       "dependsOn": ["build"],
       "outputs": [".next/**"]
+    },
+    "prepare": {
     }
   }
 }
