--- a/package.json
+++ b/package.json
@@ -4,6 +4,13 @@
   "main": "index.ts",
   "license": "MIT",
   "workspaces": ["ts-nextjs-tailwind-starter"],
-  "packageManager": "yarn@1.22.15",
-  "private": true
+  "packageManager": "yarn",
+  "private": true,
+  "scripts": {
+    "prepare": "husky install"
+  },
+  "devDependencies": {
+    "husky": "^7.0.4",
+    "lint-staged": "^12.5.0"
+  }
 }
