--- a/turbo.json
+++ b/turbo.json
@@ -2,21 +2,34 @@
   "$schema": "https://turbo.build/schema.json",
   "pipeline": {
     "build": {
-      "dependsOn": ["^lint"]
+      "dependsOn": [
+        "^lint"
+      ]
     },
     "test": {
-      "dependsOn": ["build"],
-      "inputs": ["src/**/*.tsx", "src/**/*.ts", "test/**/*.ts", "test/**/*.tsx"]
+      "dependsOn": [
+        "build"
+      ],
+      "inputs": [
+        "__tests__/**/*.ts",
+        "__tests__/**/*.tsx"
+      ]
     },
     "lint": {},
+    "lint:fix": {},
+    "format": {},
     "deploy": {
-      "dependsOn": ["build", "test", "lint"]
+      "dependsOn": [
+        "build",
+        "test",
+        "lint"
+      ]
     },
     "dev": {
-      "dependsOn": ["build"],
-      "outputs": [".next/**"]
+      "dependsOn": [
+        "build"
+      ]
     },
-    "prepare": {
-    }
+    "prepare": {}
   }
 }
