feat: test prettier

--- a/ts-nextjs-tailwind-starter/package.json
+++ b/ts-nextjs-tailwind-starter/package.json
@@ -54,10 +54,10 @@
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
       "eslint --max-warnings=0",
-      "prettier -w"
+      "prettier -w ."
     ],
     "**/*.{json,css,scss,md,webmanifest}": [
-      "prettier -w"
+      "prettier -w ."
     ]
   }
 }
