--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   "packageManager": "yarn",
   "private": true,
   "scripts": {
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "build": "turbo run build",
+    "test": "turbo run test"
   },
   "devDependencies": {
     "husky": "^7.0.4",
-    "lint-staged": "^12.5.0"
+    "lint-staged": "^12.5.0",
+    "turbo": "1.7.0"
   }
 }
