--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -24,6 +24,8 @@ jobs:
 
       - name: 📥 Download deps
         uses: bahmutov/npm-install@v1
+        with:
+          working-directory: ts-nextjs-tailwind-starter
 
       - name: 🔬 Lint
         run: yarn lint:strict
@@ -45,6 +47,8 @@ jobs:
 
       - name: 📥 Download deps
         uses: bahmutov/npm-install@v1
+        with:
+          working-directory: ts-nextjs-tailwind-starter
 
       - name: 🔎 Type check
         run: yarn typecheck
@@ -66,6 +70,8 @@ jobs:
 
       - name: 📥 Download deps
         uses: bahmutov/npm-install@v1
+        with:
+          working-directory: ts-nextjs-tailwind-starter
 
       - name: 🔎 Type check
         run: yarn format:check
@@ -87,6 +93,8 @@ jobs:
 
       - name: 📥 Download deps
         uses: bahmutov/npm-install@v1
+        with:
+          working-directory: ts-nextjs-tailwind-starter
 
       - name: 🃏 Run jest
         run: yarn test
