--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
   "devDependencies": {
     "husky": "^7.0.4",
     "lint-staged": "^12.5.0",
-    "turbo": "1.7.0"
+    "turbo": "^1.7.0"
   }
 }
