fix: fxxk eslint and tslint

--- a/ts-nextjs-tailwind-starter/tsconfig.json
+++ b/ts-nextjs-tailwind-starter/tsconfig.json
@@ -20,7 +20,7 @@
     },
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "public/svg/*"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"],
   "moduleResolution": ["node_modules", ".next", "node"]
 }
