feat: add some recommend extensions

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,11 @@
     "bradlc.vscode-tailwindcss",
     "esbenp.prettier-vscode",
     "dbaeumer.vscode-eslint",
-    "aaron-bond.better-comments"
+    "aaron-bond.better-comments",
+    "usernamehw.errorlens",
+    "eamodio.gitlens",
+    "file-icons.file-icons",
+    "antfu.file-nesting",
+    "dsznajder.es7-react-js-snippets"
   ]
 }
