--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,5 @@
   },
   "headwind.runOnSave": false,
   "typescript.preferences.importModuleSpecifier": "non-relative",
-  "eslint.workingDirectories": ["./frontend"]
+  "eslint.workingDirectories": ["./frontend","./og"]
 }
