--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.ts",
   "license": "MIT",
   "workspaces": [
-    "frontend"
+    "frontend",
+    "og"
   ],
   "packageManager": "yarn@1.22.19",
   "private": true,
