--- a/og/package.json
+++ b/og/package.json
@@ -18,7 +18,7 @@
     "autoprefixer": "^10.4.13",
     "clsx": "^1.2.1",
     "next": "^13.1.2",
-    "next-api-og-image": "^4.3.0",
+    "next-api-og-image": "2.1.1",
     "postcss": "^8.4.21",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
