--- a/og/package.json
+++ b/og/package.json
@@ -16,9 +16,10 @@
   "dependencies": {
     "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "^10.4.13",
+    "chrome-aws-lambda": "^10.1.0",
     "clsx": "^1.2.1",
     "next": "^13.1.2",
-    "next-api-og-image": "2.1.1",
+    "next-api-og-image": "^4.3.0",
     "postcss": "^8.4.21",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
